<?xml version="1.0" encoding="utf-8"?>
<!-- 
 Copyright 2013 Pierre Reliquet©
 
 Track-it is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation, either version 3 of the License, or (at your option) any
 later version.

 Track-it is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
 details.
 
 You should have received a copy of the GNU General Public License along with
 Track-it. If not, see <http://www.gnu.org/licenses/>
-->

<resources>

    <!-- App -->
    <string name="app_name">Track-it!</string>

    <!-- Menu -->
    <string name="menu_add_loan">Add a new loan</string>
    <string name="menu_list_loans">List loans</string>
    <string name="menu_list_borrowers">List borrowers</string>
    <string name="menu_close_loan">Close a loan</string>
    <string name="menu_logo">Track-it: Don\'t lose your stuff anymore, track-it!</string>
    <string name="menu_list_products">List products</string>

    <!-- Title -->
    <string name="title_activity_list_borrowers">List borrowers</string>
    <string name="title_activity_list_loans">List loans</string>
    <string name="title_activity_list_products">List Products</string>
    <string name="title_activity_close_loan">Close Loan</string>

    <!-- Loan -->
    <string name="loan_successfully_added">Loan was added successfully!</string>
    <string name="loan_add_button">Add the loan</string>
    <string name="loan_start_date">"Start date: "</string>
    <string name="loan_end_date">"End date: "</string>
    <string name="confirm_closing_title">Closing the loan</string>
    <string name="confirm_closing_content">Do you confirm that the object is back?</string>
    <string name="still_active">Still active</string>
    <string name="loan_existing_for_this_product">There is an existing loan for this product, product cannot be lend.</string>
    <string name="no_more_loans">Congrats! You have now all your products!</string>

    <!-- Product -->
    <string name="product_barcode_hint">Enter the barcode</string>
    <string name="product_name">Product\'s name</string>
    <string name="product_name_hint">Enter the name of the product</string>
    <string name="product_display">"Product: "</string>
    <string name="product_barcode">Barcode: %d</string>
    <string name="product_title">Title: %s</string>
    <string name="product_additional_info">Additional information: %s</string>
    <string name="product_additional_info_input_title">"Additional information: "</string>
    <string name="product_additional_info_hint">(Not required) Enter additional information about the product</string>

    <!-- Borrower -->
    <string name="borrower_name_hint">Enter the name of the borrower</string>
    <string name="borrower_name">Borrower\'s name</string>
    <string name="borrower_display">"Borrower: "</string>
    <string name="borrower_id">Identifier: %d</string>
    <string name="borrower_name_adapter">Name: %s</string>
    <string name="borrower_average_time">Average loan time: %d days</string>
    <string name="borrower_number_of_loans">Number of loans: %d</string>
    <string name="borrower_number_of_active_loans">Number of active loans: %d</string>

    <!-- Miscellaneous -->
    <string name="internet_looking">Looking for the title on the internet</string>
    <string name="plus">+</string>
    <string name="go_store">Confirm the play store access</string>
    <string name="store_confirmation">You are going to be redirected towards the market to download a barcode scanner. Do you agree ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="contact">Email the author</string>
    <string name="ic_launcher_description">The boomerang: logo of the app</string>
    <string name="menu_about_title">About!</string>
    <string name="menu_about_message">"Track-it: Don't lose your stuff anymore, track-it!
Version: %s
Author:
This application is developped by Pierre Reliquet (Nantes, France). If you have any ideas to enhance that application (translations, ideas, problems encountered), do not hesitate to contact me by clicking on the button below.
Licenses:
Track-it is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
Track-it is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
You should have received a copy of the GNU General Public License along with Track-it.  If not, see &lt;http://www.gnu.org/licenses/&gt;

Apache License: This program uses the Apache commons lang library which respects:
Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License.  You may obtain a copy of the License at
http://www.apache.org/licenses/LICENSE-2.0\n
Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."</string>

</resources>