<!-- 
 Copyright 2013 Pierre Reliquet©
 
 Loans Manager is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation, either version 3 of the License, or (at your option) any
 later version.

 Loans Manager is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
 details.
 
 You should have received a copy of the GNU General Public License along with
 Loans Manager. If not, see <http://www.gnu.org/licenses/>
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".Menu" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        >
        
        <ImageView 
            android:src="@drawable/ic_launcher"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:contentDescription="@string/ic_launcher_description"/>
        
        <TextView
	        android:id="@+id/menu_logo"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.75"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:gravity="center"
	        android:text="@string/menu_logo" 
        />
        
    </LinearLayout>
   
    
    <Button
	    android:id="@+id/menu_add_loan"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.2"
	    android:text="@string/menu_add_loan" 
    />
    
     <Button
	    android:id="@+id/menu_close_loan"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.2"
	    android:text="@string/menu_close_loan" 
    />
    
    <Button
	    android:id="@+id/menu_list_loans"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.2"
	    android:text="@string/menu_list_loans" 
    />
    
    <Button
	    android:id="@+id/menu_list_products"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.2"
	    android:text="@string/menu_list_products" 
    />
    
    <Button
	    android:id="@+id/menu_list_borrowers"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.2"
	    android:text="@string/menu_list_borrowers" 
    />
    
</LinearLayout>