<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddLoan" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/barcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.80"
            android:ems="10"
            android:hint="@string/product_barcode_hint"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/scan_barcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:src="@drawable/camera" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/add_loan_borrower_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center_vertical"
            android:text="@string/product_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/add_loan_input_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:ems="10"
            android:hint="@string/product_name_hint"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/add_loan_borrower_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center_vertical"
            android:text="@string/borrower_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <AutoCompleteTextView
            android:id="@+id/add_loan_borrower_name_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:ems="10"
            android:hint="@string/borrower_name_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/add_loan_product_additional_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center_vertical"
            android:text="@string/product_additional_info_input_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/add_loan_product_additional_info_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:ems="10"
            android:hint="@string/product_additional_info_hint"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <Button
        android:id="@+id/add_loan_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/loan_add_button" />

</LinearLayout>